# testara

./: .env.example  .gitignore  APPIUM_PLAN.md  APP_CONTEXT.md  AUTO_CONTEXT_FEATURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN-SYSTEM.md  Dockerfile.backend  Dockerfile.ui  FIX_SUMMARY.md  FRONTEND-SETUP.md  LANDING-PAGE-DESIGN.md  LICENSE  PILOT-QUICKSTART.md  PROBLEMS.md  README.md  SETTINGS-GUIDE.md  TEST-EXECUTION-GUIDE.md  TREE_SITTER_TEST_RESULTS.md  WORKFLOW.md  add_test_file.py  browserstack.yml  docker-compose.yml  generate_app_context.py  mkdocs.yml  pyproject.toml  run.sh  run_validation.sh  setup.sh  start.sh  start_enhanced.sh  test_auto_context.sh  testara-pitch-deck.md
.github/workflows/: docs.yml
Accessibility/: AccessibilityIdWrapper.swift  AccessibilityIdentificable.swift  AccessibilityInjector.swift
backend/app/: main.py
backend/recordings/: .gitignore
docs/: APPIUM_SETUP.md  FRONTEND_DESIGN_SPEC.md  README.md  index.md
docs/advanced/: ci-cd.md  customization.md  docker.md
docs/api/: python.md  rest.md
docs/architecture/: generation.md  (+2 more)
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
landing/: DEPLOY-NOW.md  IMPLEMENTATION-PLAN.md  LANDING-PAGE-REVISED.md  QUICKSTART.md  README.md  package-lock.json  package.json  tailwind.config.ts
rag/: accessibility_injector.py  ast_parser.py  auditor.py  chunker.py  cli.py  localization_parser.py  store.py  storyboard_parser.py  test_accessibility_injector.py
scripts/: device_server.py
tests/: test_context_enrichment_quality.py
ui/: app.py
(+94 files in other folders)
