[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ios-test-automator"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-chroma>=0.1",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-huggingface>=0.1",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "tenacity>=8.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pbxproj>=4.0",
    "tree-sitter>=0.23",
    "tree-sitter-swift>=0.3",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "pymdown-extensions>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/app", "rag"]
